--- a/docs/style.css
+++ b/docs/style.css
@@ -1,14 +1,15 @@
 html,body{
   height: 100%;
   margin: 0;
-
+  color:black;
+  background-color:black;
 }
 h1,h2,h3,h4,h5,h6,body,article,main,p{
 color:black;
 
 }::selection { color: black; }
 
-/* h1::selection { color: black; } */
+h1::selection { color: black; }
 .top-heading{
   margin-top: 0;
 }
@@ -24,4 +25,5 @@ height: 100%;
 text-align: center;
 position: relative;
 top:30%;
+background-color:black;
 }
